Mi primer commit

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <body>
     <h1>Hello World!</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit deserunt enim ut veritatis itaque asperiores praesentium magni dolor quibusdam numquam, ab laudantium ex sit omnis repudiandae dolorum, saepe hic rem!
-
-    </p>
+</p>
+<form>
+    <input type="tel" placeholder="449-999-7842" pattern="[0-9]{10}" required><br><br>
+    <button background:>Enviar</button>
+</form>
 </body>
 </html>
